force-app/main/default/objects/HI_Endpoints__c/HI_Endpoints__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>HI Endpoints</label>
</CustomObject>