force-app/main/default/objects/HI_Endpoints__c/fields/Auth_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Auth_Endpoint__c</fullName>
    <label>Auth Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>