force-app/main/default/objects/HI_Endpoints__c/fields/Lead_Enpoint__c.field-meta.xml
<CustomField>
    <fullName>Lead_Enpoint__c</fullName>
    <label>Lead Enpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>