force-app/main/default/objects/HI_Endpoints__c/fields/Rp_Dealer_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Rp_Dealer_Endpoint__c</fullName>
    <label>Rp Dealer Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>